--- a/src/main/webapp/WEB-INF/views/second/exit.html
+++ b/src/main/webapp/WEB-INF/views/second/exit.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="ISO-8859-1">
-    <title>My app</title>
+    <title>HelloPage</title>
 </head>
 
 <body>
 
-<p>Hello world!</p>
+<p>No more links</p>
 
 </body>
 
