Изучена аннотация @RequestParam

--- a/src/main/webapp/WEB-INF/views/first/goodBye.html
+++ b/src/main/webapp/WEB-INF/views/first/goodBye.html
@@ -9,7 +9,7 @@
 <body>
 
 <p>Goodbye world!</p>
-<a href="/hello">Say hello</a>
+<a href="/first/hello?name=Jony&surname=Migmig">Say hello</a>
 or <a href="/exit">exit</a>
 </body>
 
